--- a/Stunde1.Rmd
+++ b/Stunde1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "1. RStudio und das tidyverse"
+title: "Einführung in RStudio"
 output:
   html_document:
     toc: true
@@ -16,7 +16,7 @@ output:
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
 
-## Ziele der Sitzung
+# Ziele der Sitzung
 
 1. Gutes Verständnis von R in RStudio
 
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 
 2. Know-How im Tidyverse
 
-## 1.1 R und RStudio installieren 
+# R und RStudio installieren 
 
 Wenn IW-Laptops benutzt werden, sollten R und RStudio bereits von der IT installiert bzw. aktualisiert worden sein. Auf privaten Laptops müssen R und RStudio selbst installiert werden. Falls sich schon ältere Versionen auf den Laptops befinden, sollten diese auf die untenstehnden Versionen aktualisiert werden:
 
@@ -35,11 +35,11 @@ Wenn IW-Laptops benutzt werden, sollten R und RStudio bereits von der IT install
 
 Die Kursinhalte können ggf. auch mit älteren Version bearbeitet werden. Für eine Minimierung möglicher Fehler macht es aber Sinn, dass alle Kursteilnehmer mit den gleichen Versionen arbeiten. 
 
-## 1.2 RStudio verstehen
+# RStudio verstehen
 
 RStudio ist ein integrierte Entwicklungsumgebung (IDE) und graphische Benutzeroberflächer für R. [RStudio](https://rstudio.com/) ist als lokale Desktop-Version, als Server Version und auch in der Cloud verfügbar. Auch wenn R und R-Skripte auch über die Konsole gestartet werden können, bietet R-Studio einige Komfortfunktionen, die die Datenanalyse vereinfachen. Diese Funktionen umfassen unter anderem die Organisation von Analysen und Daten in Projekten (siehe Kapitel 1.3), die Möglichkeit Datensätze interaktiv zu betrachten, die Visualisierung von Daten und etwa die direkte Integration von Versionsverwaltung mit [Git](https://git-scm.com/). 
 
-### 1.2.1 Das Layout von R-Studio
+# Das Layout von R-Studio
 
 ![](images/R-panes.png)
 Das Grundlayout von R-Studio besteht aus vier Fenstern. Diese sind wie oben
@@ -56,16 +56,21 @@ angeordnet und können funktional folgendermaßen unterschieden werden:
 Über 'Tools > Global Options > Pane Layout' können diese Fenster nach belieben angeordnet und ein- bzw. ausgeblendet werden. 
 
 
-### 1.2.2 Erweiterte Einstellungen in R-Studio
+# Erweiterte Einstellungen
 
 Wenn man R-Studio das erste mal benutzt, macht es Sinn, einige Einstellungen zu verändern, die standardmäßig eingestellt sind. 
 
 Hier macht es Sinn, sich unter 'Tools > Global Options' einmal die verschiedenen Optionen anzuschauen. 
 
 ![](images/R-einstellungen.png)
-Zwei wichtige Einstellungen sind (unserer Meinung nach) den Haken bei "Restore .RData into workspace at start-up" zu entfernen und die Option bei "Save workspace to .RData on exit" auf "Never" zu setzen. In einzelfällen kann es sinnvoll sein, Daten und Zuweisungen aus der letzten Sitzung automatisch in der nächsten Sitzung zu laden. In vielen Fällen kann dies aber zu Verwirrung oder sogar zu Fehlern führen. 
+Zwei wichtige Einstellungen sind (unserer Meinung nach):
+
+1. den Haken bei "Restore .RData into workspace at start-up" zu entfernen und 
+2. die Option bei "Save workspace to .RData on exit" auf "Never" zu setzen. 
+
+In Einzelfällen kann es sinnvoll sein, Daten und Zuweisungen aus der letzten Sitzung automatisch in der nächsten Sitzung zu importieren. Öfter kann dies aber zu Verwirrung oder sogar zu Fehlern führen. 
 
 Des Weiteren macht es Sinn, sich unter 'Tools > Global Options > Appearance' mit den verfügbaren Optionen auseinanderzusetzen. Hier lassen sich etwa Schriftart und -größe sowie das Generelle Theme von R-Studio einstellen. Wenn man längere Zeit vor R-Studio sitzt (was durchaus zu empfehlen ist), kann es Sinn machen einen Darkmode zu nutzen, um die Augen zu schonen. 
 
 
-### 1.2.3 Erstellung von Projekten
+# Erstellung von Projekten
